# nuwro

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  metropolis-hastings.md
cmake/: NuWroConfig.cmake.in  generate_params.cmake  setup.sh.in
data/juno/: 3DFluxSolMax.txt  3DFluxSolMin.txt  GenNuWro.txt  JUNOLS.txt  RefModel.txt  energy.txt  general.txt  hkkm-juno-1d.txt  lfg.txt  sf_esf.txt  sf_lfg.txt
data/juno/hkkm-3d/solmax/nuwro/: nue.txt  nue_bar.txt  numu.txt  numu_bar.txt
data/juno/hkkm-3d/solmin/nuwro/: nue.txt  nue_bar.txt  numu.txt  numu_bar.txt
install/: setup.sh
src/: CMakeLists.txt  beam.cc  beam_atmo.h  beam_atmo3d.h  chooser.h  dirs.cc  dirs.h  example_gen.cc  generatormt.cc  generatormt.h  kaskada7.cc  libnuwro.cc  libnuwro.h  mecevent_2020Valencia.cc  metropolis.h  nuwro.cc  nuwro.h  nuwro2rootracker.cc  nuwro_metropolis.cc  nuwro_metropolis.h  nuwro_metropolis_main.cc  params.xml  params_all.h  params_all_orig.h  timing_profiler.h
src/dis/: dis_nc.cc  res_xsec.cc  resevent2.cc
